RESOLVED FIXED255849
Attachment: Download icon looks bad in dark mode
https://bugs.webkit.org/show_bug.cgi?id=255849
Summary Attachment: Download icon looks bad in dark mode
Gerald Squelart
Reported 2023-04-23 19:03:38 PDT
The button has an incorrect background appearance in both dark and light mode - particularly when changing between dark/light mode. rdar://107157550
Attachments
Gerald Squelart
Comment 1 2023-04-23 19:10:15 PDT
EWS
Comment 2 2023-04-24 15:10:18 PDT
Committed 263340@main (35779e4c19ae): <https://commits.webkit.org/263340@main> Reviewed commits have been landed. Closing PR #13087 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.