Source/WebCore/css/parser/CSSParserIdioms.cpp
@@ -39,7 +39,7 @@ bool isValueAllowedInMode(unsigned short id, CSSParserMode mode)
     switch (id) {
     case CSSValueWebkitFocusRingColor:
         return isUASheetBehavior(mode) || isQuirksModeBehavior(mode);
-#if PLATFORM(MAC)
+#if PLATFORM(COCOA)
     case CSSValueAppleSystemTertiaryFill:
 #endif
 #if PLATFORM(IOS_FAMILY)
